--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,25 +55,18 @@ jobs:
       uses: docker/setup-qemu-action@v2
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        role-to-assume: arn:aws:iam::123456789012:role/[TO-BE-REPLACED]
+        aws-region: eu-west-1
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
     - id: build_and_push
       name: Build and push
       uses: docker/build-push-action@v2
       with:
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: motoserver/moto:${{ env.VERSION }}
-    - name: Increase patch version number
-      run: |
-        python update_version_from_git.py patch
-        sed -i 's/Docker Digest for ${{ env.VERSION }}: <autopopulateddigest>/Docker Digest for ${{ env.VERSION }}: _${{ steps.build_and_push.outputs.digest }}_/' CHANGELOG.md
-        git config --local user.email "admin@getmoto.org"
-        git config --local user.name "Moto Admin"
-        git add moto/__init__.py
-        git add CHANGELOG.md
-        git commit -m "Post-release steps"
-        git push
+        tags: 489098123993.dkr.ecr.eu-west-1.amazonaws.com/bluegroundltd/motoserver:latest
