--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,160 +9,97 @@ jobs:
     strategy:
       matrix:
         python-version: [ 3.7, 3.8, 3.9, "3.10", "3.11" ]
-
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Get pip cache dir
-        id: pip-cache-dir
-        run: |
-          echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
-      - name: pip cache
-        id: pip-cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.pip-cache-dir.outputs.dir }}
-          key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.cfg') }}-4
+          cache: 'pip'
       - name: Update pip
-        if: ${{ steps.pip-cache.outputs.cache-hit != 'true' }}
-        run: |
-          python -m pip install --upgrade pip
+        run: python -m pip install --upgrade pip
       - name: Install project dependencies
-        if: ${{ steps.pip-cache.outputs.cache-hit != 'true' }}
-        run: |
-          pip install -r requirements-dev.txt
+        run: pip install -r requirements-dev.txt
 
   lint:
     name: Linting
     runs-on: ubuntu-latest
-    needs: cache
+    needs: [cache]
     strategy:
       matrix:
         python-version: [3.9]
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    # Retrieve the previously cached dependencies
-    - name: Get pip cache dir
-      id: pip-cache
-      run: |
-        echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
-    - name: pip cache
-      uses: actions/cache@v3
-      with:
-        path: ${{ steps.pip-cache.outputs.dir }}
-        key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.cfg') }}
-    # Update PIP
+        cache: 'pip'
     - name: Update pip
-      run: |
-        python -m pip install --upgrade pip
-    # Still need to properly install the dependencies - it will only skip the download part
+      run: python -m pip install --upgrade pip
     - name: Install project dependencies
-      run: |
-        pip install -r requirements-dev.txt
+      run: pip install -r requirements-dev.txt
     - name: Lint with flake8
-      run:
-        make lint
+      run: make lint
 
   test:
     name: Unit test
     runs-on: ubuntu-latest
-    needs: lint
+    needs: [lint]
     strategy:
       fail-fast: false
       matrix:
         python-version: [3.7, 3.8, 3.9, "3.10", "3.11"]
-
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Get pip cache dir
-      id: pip-cache
-      run: |
-        echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
-    - name: pip cache
-      uses: actions/cache@v3
-      with:
-        path: ${{ steps.pip-cache.outputs.dir }}
-        key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.cfg') }}
+        cache: 'pip'
     - name: Update pip
-      run: |
-        python -m pip install --upgrade pip
+      run: python -m pip install --upgrade pip
     - name: Install project dependencies
       run: |
         pip install -r requirements-dev.txt
         pip install pytest-cov
         pip install pytest-github-actions-annotate-failures
     - name: Test with pytest
-      run: |
-        make test-only
-    - name: "Upload coverage to Codecov"
-      if: ${{ github.repository == 'getmoto/moto'}}
-      uses: codecov/codecov-action@v3
-      with:
-        fail_ci_if_error: false
-        flags: unittests
+      run: make test-only
 
   testserver:
     name: Unit tests in Server Mode
     runs-on: ubuntu-latest
-    needs: lint
+    needs: [lint]
     strategy:
       fail-fast: false
       matrix:
         python-version: [3.7, 3.8, 3.9, "3.10", "3.11"]
-
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip'
     - name: Start MotoServer
       run: |
         pip install build
         python -m build
         docker run --rm -t --name motoserver -e TEST_SERVER_MODE=true -e AWS_SECRET_ACCESS_KEY=server_secret -e AWS_ACCESS_KEY_ID=server_key -v `pwd`:/moto -p 5000:5000 -v /var/run/docker.sock:/var/run/docker.sock python:3.7-buster /moto/scripts/ci_moto_server.sh &
         python scripts/ci_wait_for_server.py
-    - name: Get pip cache dir
-      id: pip-cache
-      run: |
-        echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
-    - name: pip cache
-      uses: actions/cache@v3
-      with:
-        path: ${{ steps.pip-cache.outputs.dir }}
-        key: pip-${{ matrix.python-version }}-${{ hashFiles('**/setup.cfg') }}
     - name: Update pip
-      run: |
-        python -m pip install --upgrade pip
+      run: python -m pip install --upgrade pip
     - name: Install project dependencies
-      run: |
-        pip install -r requirements-dev.txt
+      run: pip install -r requirements-dev.txt
     - name: Test ServerMode/Coverage
       env:
         TEST_SERVER_MODE: ${{ true }}
-      run: |
-        make test-only
-    - name: "Upload coverage to Codecov"
-      if: ${{ github.repository == 'getmoto/moto'}}
-      uses: codecov/codecov-action@v3
-      with:
-        fail_ci_if_error: false
-        flags: servertests
+      run: make test-only
     - name: "Stop MotoServer"
       if: always()
       run: |
@@ -173,7 +110,7 @@ jobs:
         docker stop motoserver
     - name: Archive TF logs
       if: always()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: motoserver-${{ matrix.python-version }}
         path: |
@@ -182,7 +119,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: [test, testserver ]
+    needs: [test, testserver]
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'getmoto/moto' }}
     strategy:
       matrix:
