--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,64 +9,43 @@ on:
 
 jobs:
   release-moto-job:
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - action-runner: arc-runner-set
+            platform: linux/arm64
+          - action-runner: ubuntu-latest
+            platform: linux/amd64
     name: Release Moto
     env:
       VERSION: 0.0.0
+    permissions:
+      id-token: write
+      contents: write
+    runs-on: ${{ matrix.action-runner }}
     steps:
-    - name: Set Env
-      run: |
-        echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.8
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install wheel setuptools packaging twine build --upgrade
-    - name: Verify Tag does not exist
-      run: |
-        ! git rev-parse ${{ env.VERSION }} || { echo "Ensure that no tag exists for ${{ env.VERSION }}" ; exit 1; }
-    - name: Verify supplied version exists in the CHANGELOG
-      run: |
-        grep ${{ env.VERSION }} CHANGELOG.md || { echo "Ensure that the CHANGELOG contains an entry for ${{ env.VERSION }}" ; exit 1; }
-    - name: Set version number
-      run: python update_version_from_git.py ${{ env.VERSION }}
-    - name: Build
-      run: python -m build
-    - name: Publish to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
-    - name: Tag version on Github
-      run: |
-        git tag ${{ env.VERSION }}
-        git push origin ${{ env.VERSION }}
-    - name: Build Docker release
-      run: |
-        docker build -t motoserver/moto . --tag moto:${{ env.VERSION }}
-    # Required to get the correct Digest
-    # See https://github.com/docker/build-push-action/issues/461
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
+      uses: docker/setup-qemu-action@v3
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v3
     - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: aws-actions/configure-aws-credentials@v4
       with:
-        role-to-assume: arn:aws:iam::123456789012:role/[TO-BE-REPLACED]
-        aws-region: eu-west-1
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
+        role-to-assume: arn:aws:iam::489098123993:role/github-actions-assumable-role
+        aws-region: us-east-1
+    - name: Login to Amazon ECR Public
+      id: login-ecr-public
+      uses: aws-actions/amazon-ecr-login@v2
+      with:
+        registry-type: public
     - id: build_and_push
       name: Build and push
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v5
       with:
-        platforms: linux/amd64,linux/arm64
+        platforms: ${{ matrix.platform }}
         push: true
-        tags: 489098123993.dkr.ecr.eu-west-1.amazonaws.com/bluegroundltd/motoserver:latest
+        tags: public.ecr.aws/bluegroundltd/motoserver:latest
